<resources>
    <string name="app_name">天使之音</string>
    <string name="str_Account_Txv">帳號:</string>
    <string name="str_Password_Txv">密碼:</string>
    <string name="str_address_Hint">請輸入地址</string>


    <string name="str_Phone_Txv">手機:</string>
    <string name="str_Account_Hint">請輸入註冊帳號</string>
    <string name="str_Password_Hint">請輸入註冊密碼</string>
    <string name="str_Phone_Hint">請輸入註冊手機</string>
    <string name="str_ConfirmPassword_Hint">請再輸入一次密碼</string>


    <string name="str_ConfirmPassword_Txv">密碼確認:</string>

    <string name="str_Account_Edt_Hint">輸入帳號</string>
    <string name="str_Password_Edt_Hint">輸入密碼</string>
    <string name="str_Registered_Btn">註冊</string>
    <string name="str_Login_Btn">登入</string>

    //個人資料頁面
    <string name="str_Voice_Btn">語音辨識</string>
    <string name="str_PersonalInformation_Btn">個人資料</string>
    <string name="str_EmergencyContact_Btn">緊急連絡人</string>
    <string name="str_MapView_Btn">地圖</string>

    <string name="str_Name_Txv">姓名</string>
    <string name="str_Name2_Txv">[姓名]</string>
    <string name="str_phone_Txv">電話</string>
    <string name="str_phone2_Txv">[電話]</string>
    <string name="str_address_Txv">地址</string>
    <string name="str_address2_Txv">[地址]</string>


    <string name="str_AddContact_Btn">新增聯絡人</string>


    <string name="str_Name_Btn_Hint">輸入姓名</string>
    <string name="str_Phone_Btn_Hint">輸入電話</string>
    <string name="str_Address_Edt_Hint">輸入稱謂</string>
    <string name="str_Add_Btn">新增</string>
    <string name="str_cancel_Btn">取消</string>


    <string name="str_Save_Btn">儲存</string>
    <string name="str_Recording_Btn">錄音</string>
    <string name="str_Meaning_Edt_Hint">輸入語意</string>
    <string name="str_Setting_Txv">設定</string>
    <string name="hello_blank_fragment">Hello</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
