<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.personalInformationActivity">

    <Button
        android:id="@+id/voice_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:onClick="voiceOnClick"
        android:text="@string/str_Voice_Btn" />

    <Button
        android:id="@+id/personalInformation_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/voice_Btn"
        android:onClick="personalInformationOnClick"
        android:text="@string/str_PersonalInformation_Btn"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/emergencyContact_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/personalInformation_Btn"
        android:onClick="emergencyContactOnClick"
        android:text="@string/str_EmergencyContact_Btn"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/mapView_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/emergencyContact_Btn"
        android:onClick="mapViewOnClick"
        android:text="@string/str_MapView_Btn"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/name_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/voice_Btn"
        android:layout_below="@+id/voice_Btn"
        android:layout_marginStart="14dp"
        android:layout_marginTop="78dp"
        android:text="@string/str_Name_Txv" />

    <TextView
        android:id="@+id/phone_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name_Txv"
        android:layout_below="@+id/name_Txv"
        android:layout_marginTop="30dp"
        android:text="@string/str_phone_Txv" />

    <TextView
        android:id="@+id/address_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/phone_Txv"
        android:layout_below="@+id/phone_Txv"
        android:layout_marginTop="31dp"
        android:text="@string/str_address_Txv" />

    <TextView
        android:id="@+id/name2_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/name_Txv"
        android:layout_centerHorizontal="true"
        android:text="@string/str_Name2_Txv" />

    <TextView
        android:id="@+id/phone2_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name2_Txv"
        android:layout_alignTop="@+id/phone_Txv"
        android:text="@string/str_phone2_Txv" />

    <TextView
        android:id="@+id/address2_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/address_Txv"
        android:layout_alignStart="@+id/phone2_Txv"
        android:text="@string/str_address2_Txv" />
</RelativeLayout>
