<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.addEmergencyContactActivity">

    <TextView
        android:id="@+id/phone_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name_Txv"
        android:layout_below="@+id/name_Txv"
        android:layout_marginTop="30dp"
        android:text="@string/str_phone_Txv" />

    <TextView
        android:id="@+id/address_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/phone_Txv"
        android:layout_below="@+id/phone_Txv"
        android:layout_marginTop="31dp"
        android:text="@string/str_address_Txv" />

    <TextView
        android:id="@+id/name_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/str_Name_Txv" />

    <EditText
        android:id="@+id/name_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_Txv"
        android:layout_alignBottom="@+id/name_Txv"
        android:layout_marginStart="53dp"
        android:layout_toEndOf="@+id/name_Txv"
        android:ems="10"
        android:hint="@string/str_Name_Btn_Hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phone_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_Edt"
        android:layout_below="@+id/name_Txv"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/str_Phone_Btn_Hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/phone_Edt"
        android:layout_below="@+id/phone_Edt"
        android:ems="10"
        android:hint="@string/str_Address_Edt_Hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/add_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/address_Edt"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="96dp"
        android:text="@string/str_Add_Btn" />

    <Button
        android:id="@+id/cancel_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/add_Btn"
        android:layout_toEndOf="@+id/address_Txv"
        android:text="@string/str_cancel_Btn" />

</RelativeLayout>
