<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.registeredActivity">


    <Button
        android:id="@+id/registered_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone_Edt"
        android:layout_below="@+id/phone_Edt"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="36dp"
        android:onClick="registeredBtnClick"
        android:text="註冊"
         />

    <TextView
        android:id="@+id/account_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="33dp"
        android:text="@string/str_Account_Txv" />

    <TextView
        android:id="@+id/password_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/account_Txv"
        android:layout_below="@+id/account_Edt"
        android:layout_marginTop="23dp"
        android:text="@string/str_Password_Txv" />

    <EditText
        android:id="@+id/account_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_Txv"
        android:layout_alignBottom="@+id/account_Txv"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/str_Account_Hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password_Txv"
        android:layout_alignBottom="@+id/password_Txv"
        android:layout_alignStart="@+id/account_Edt"
        android:ems="10"
        android:hint="@string/str_Password_Hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phone_Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone_Edt"
        android:layout_alignBottom="@+id/phone_Edt"
        android:layout_alignStart="@+id/password_Txv"
        android:text="@string/str_Phone_Txv" />

    <EditText
        android:id="@+id/phone_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_Edt"
        android:layout_below="@+id/password_Edt"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/str_Phone_Hint"
        android:inputType="textPersonName" />
</RelativeLayout>
