<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.setPersonalInformationActivity">

    <EditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_Name_Btn_Hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phoneEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_Phone_Btn_Hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/addressEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_address_Hint"
        android:inputType="textPersonName" />
</LinearLayout>
