<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.addEmergencyInformation"
    android:orientation="vertical">


    <EditText
        android:textColor="#000"
        android:textSize="25dp"
        android:id="@+id/emergencyNameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_Name_Btn_Hint"
        android:inputType="textPersonName" />

    <EditText
        android:textColor="#000"
        android:textSize="25dp"
        android:id="@+id/emergencyNickNameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_Address_Edt_Hint"
        android:inputType="textPersonName" />

    <EditText

        android:textColor="#000"
        android:textSize="25dp"
        android:id="@+id/emergencyPhoneEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_Phone_Btn_Hint"
        android:inputType="number" />
</LinearLayout>
