<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.voiceActivity">

    <Button
        android:id="@+id/voice_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:onClick="voiceOnClick"
        android:text="@string/str_Voice_Btn" />

    <Button
        android:id="@+id/personalInformation_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/voice_Btn"
        android:onClick="personalInformationOnClick"
        android:text="@string/str_PersonalInformation_Btn"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/emergencyContact_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/personalInformation_Btn"
        android:onClick="emergencyContactOnClike"
        android:text="@string/str_EmergencyContact_Btn"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/mapView_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/emergencyContact_Btn"
        android:onClick="mapViewOnClick"
        android:text="@string/str_MapView_Btn"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/personalInformation_Btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:background="@drawable/mybutton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="TextView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/voice_Btn"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="29dp"
        android:text="Button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/textView"
        android:text="Button" />
</RelativeLayout>
