<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.MainActivity"
    android:background="@drawable/background_color"
    >

    <Button
        android:id="@+id/login_Btn"
        android:layout_width="189dp"
        android:layout_height="50dp"


        android:layout_below="@+id/password_Edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"

        android:background="@drawable/button_border"
        android:onClick="loginOnClick"
        android:text="@string/str_Login_Btn"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="190dp" />

    <Button
        android:background="@drawable/button_border"
        android:id="@+id/registered_Btn"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_Btn"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"

        android:onClick="registerOnClick"

        android:text="@string/str_Registered_Btn"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="190dp" />

    <!--<TextView-->
        <!--android:id="@+id/account_Txv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/textView2"-->
        <!--android:layout_marginTop="44dp"-->
        <!--android:layout_toStartOf="@+id/account_Edt"-->
        <!--android:text="@string/str_Account_Txv"-->
        <!--android:textSize="20dp"-->
        <!--tools:ignore="MissingConstraints"-->
        <!--tools:layout_editor_absoluteX="36dp"-->
        <!--tools:layout_editor_absoluteY="64dp" />-->

    <!--<TextView-->
        <!--android:textSize="20dp"-->
        <!--android:id="@+id/password_Txv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@+id/password_Edt"-->
        <!--android:layout_alignBottom="@+id/password_Edt"-->
        <!--android:layout_alignStart="@+id/account_Txv"-->
        <!--android:text="@string/str_Password_Txv"-->
        <!--tools:ignore="MissingConstraints"-->
        <!--tools:layout_editor_absoluteX="36dp"-->
        <!--tools:layout_editor_absoluteY="108dp" />-->

    <EditText
        android:textSize="20dp"
        android:id="@+id/account_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/str_Account_Edt_Hint"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="49dp" />

    <EditText
        android:textSize="20dp"
        android:id="@+id/password_Edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/account_Edt"
        android:layout_below="@+id/account_Edt"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/str_Password_Edt_Hint"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="AngelHeart"
        android:textSize="30dp" />

    <!--<Button-->
        <!--android:id="@+id/clearTable_Btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignStart="@+id/registered_Btn"-->
        <!--android:layout_below="@+id/registered_Btn"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:onClick="clearTableOnClick"-->
        <!--android:text="Button" />-->
</RelativeLayout>
