<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.personalInformationFragment"
    android:background="@drawable/background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_Txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:text="@string/str_Name_Txv"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/name2_Txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_Txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:text="@string/str_phone_Txv"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/phone2_Txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/name2_Txv"
                android:layout_alignTop="@+id/phone_Txv"
                android:layout_marginLeft="20dp"
                android:textSize="20dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_Txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:text="@string/str_address_Txv"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/address2_Txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:background="@drawable/button_border"
                android:id="@+id/personalSet_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Setting_Txv"
                android:textSize="20dp" />

        </LinearLayout>


    </LinearLayout>


    <!-- TODO: Update blank fragment layout -->
    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<TextView-->
    <!--android:id="@+id/name_Txv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginEnd="74dp"-->
    <!--android:layout_marginTop="112dp"-->
    <!--android:layout_toStartOf="@+id/name2_Txv"-->
    <!--android:text="@string/str_Name_Txv"-->
    <!--android:textSize="20dp" />-->

    <!--<TextView-->
    <!--android:id="@+id/phone_Txv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignEnd="@+id/name_Txv"-->
    <!--android:textSize="20dp"-->
    <!--android:layout_below="@+id/name_Txv"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:text="@string/str_phone_Txv" />-->

    <!--<TextView-->
    <!--android:id="@+id/address_Txv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignStart="@+id/phone_Txv"-->
    <!--android:textSize="20dp"-->
    <!--android:layout_below="@+id/phone_Txv"-->
    <!--android:layout_marginTop="31dp"-->
    <!--android:text="@string/str_address_Txv" />-->

    <!--<TextView-->
    <!--android:id="@+id/name2_Txv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="20dp"-->
    <!--android:layout_alignTop="@+id/name_Txv"-->
    <!--android:layout_centerHorizontal="true" />-->

    <!--<TextView-->
    <!--android:id="@+id/phone2_Txv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="20dp"-->
    <!--android:layout_alignStart="@+id/name2_Txv"-->
    <!--android:layout_alignTop="@+id/phone_Txv" />-->

    <!--<TextView-->
    <!--android:id="@+id/address2_Txv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="20dp"-->
    <!--android:layout_alignBottom="@+id/address_Txv"-->
    <!--android:layout_alignStart="@+id/phone2_Txv" />-->

    <!--<Button-->
    <!--android:id="@+id/personalSet_Btn"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_marginBottom="107dp"-->
    <!--android:layout_marginEnd="49dp"-->
    <!--android:text="@string/str_Setting_Txv"-->
    <!--android:textSize="20dp" />-->

    <!--</RelativeLayout>-->

</FrameLayout>
